fix: fixed broken clone button binding